# BirdNion

./: .gitignore  AGENTS.md  CLAUDE.md  README.md
.github/workflows/: linux-build.yml  linux-release.yml
AIStatusbar/: AIStatusbarApp.swift  AppDelegate.swift  Info.plist
AIStatusbar.xcodeproj/: project.pbxproj
AIStatusbar/Models/: ProviderStatus.swift
AIStatusbar/Providers/: ClaudeProvider.swift  HapoHubConfig.swift  HapoHubProvider.swift  MiniMaxProvider.swift  MockHapoHubProvider.swift
AIStatusbar/Services/: ProvidersStore.swift  QuotaService.swift  ServicesContainer.swift  SettingsStore.swift
AIStatusbar/Views/: ConfigPanel.swift  MenuBarIcon.swift  PopoverView.swift  QuotaPanel.swift  SettingsWindow.swift
AIStatusbarTests/: CodexProviderTests.swift  HapoHubProviderTests.swift  MiniMaxProviderParserTests.swift  ProviderStatusTests.swift  QuotaServicePollingTests.swift
Assets.xcassets/GrokLogo.imageset/: Contents.json
Assets.xcassets/HiyoLogo.imageset/: Contents.json
Assets.xcassets/MiniMaxLogo.imageset/: Contents.json
BirdNion/: AppDelegate.swift  BirdNionApp.swift  Info.plist
BirdNion.xcodeproj/: project.pbxproj
BirdNion/Models/: ProviderStatus.swift
BirdNion/Providers/: ClaudeCodeBackend.swift  ClaudeCodeModelsFetcher.swift  ClaudeProvider.swift  ElevenLabsProvider.swift  FreemodelProvider.swift  GrokCostScanner.swift  GrokProvider.swift  HapoHubConfig.swift  HapoHubProvider.swift  HiyoProvider.swift  KiroCostScanner.swift  KiroProvider.swift  MiniMaxProvider.swift  OllamaProvider.swift  OpenAIProvider.swift  OpenRouterProvider.swift
BirdNion/Services/: AppLocalizer.swift  BirdNionConfigStore.swift  CLIProxyAPIClient.swift  CLIProxyAPIConfiguration.swift  ClaudeCodeConfigWriter.swift  CodexConfigDocument.swift  CodexConfigWriter.swift  ConfigService.swift  CostHistoryStore.swift  (+8 more)
BirdNionTests/: ClaudeCodeTests.swift  ClaudeNativeTests.swift  CodexConfigWriterTests.swift  CodexCostScannerTests.swift  CodexForkBaselineTests.swift  CodexProviderTests.swift  CodexWebDashboardTests.swift  CombinedUsageReportTests.swift  HapoHubProviderTests.swift  MiniMaxProviderParserTests.swift  NewProviderTests.swift  PopoverPanelSizingTests.swift  ProviderErrorClassifierTests.swift  ProviderStatusTests.swift  QuotaServicePollingTests.swift  UpdateCheckerTests.swift
Casks/: birdnion.rb
Scripts/: release.sh
docs/: build.md  development-roadmap.md  linux-parity-matrix.md  system-architecture.md
linux/: .gitignore  README.md  index.html  package-lock.json  package.json  settings.html  vite.config.ts
linux/src-tauri/: Cargo.toml  tauri.conf.json
linux/src-tauri/capabilities/: default.json
linux/src-tauri/icons/: icon.icns
linux/src-tauri/src/: claude_code.rs  claude_scanner.rs  cli_proxy.rs  codex_accounts.rs  codex_config.rs  codex_scanner.rs  config.rs  cost_history.rs  elevenlabs_keys.rs  freemodel_accounts.rs  grok_scanner.rs  hiyo_keys.rs  kiro_scanner.rs  lib.rs  main.rs  storage.rs  updater.rs  usage.rs
linux/src-tauri/src/providers/: alibaba.rs  antigravity.rs  bedrock.rs  browser_cookies.rs  claude.rs  claude_admin.rs  codex.rs  commandcode.rs  copilot.rs  copilot_device.rs  copilot_oauth.rs  cursor.rs  deepgram.rs  deepseek.rs  elevenlabs.rs  error_classifier.rs  freemodel.rs  gemini.rs  grok.rs  groq.rs  hapo.rs  hiyo.rs  kilo.rs  kiro.rs  mimo.rs  minimax.rs  mod.rs  ollama.rs  openai.rs  opencode.rs  opencodego.rs  openrouter.rs  zai.rs
(+115 files in other folders)
