[package]
name = "birdnion"
version = "0.1.0"
description = "BirdNion for Linux — AI provider usage & cost tracker (tray app)"
authors = ["hapo-nghialuu"]
edition = "2021"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "birdnion_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
walkdir = "2"
# rustls thay vì openssl để build Linux không cần libssl-dev.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
futures = "0.3"
# kiro.rs: CLI-output parsing (ANSI strip + usage regexes).
regex = "1"
# bedrock.rs: AWS SigV4 request signing.
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
