[package]
name = "birdnion"
version = "0.10.4"
description = "BirdNion for Linux — AI provider usage & cost tracker (tray app)"
authors = ["hapo-nghialuu"]
edition = "2021"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "birdnion_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
chrono-tz = "0.10"
icu_properties = "2.2"
unicode-normalization = "0.1"
walkdir = "2"
# rustls thay vì openssl để build Linux không cần libssl-dev.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
futures = "0.3"
# kiro.rs: CLI-output parsing (ANSI strip + usage regexes).
regex = "1"
# bedrock.rs: AWS SigV4 request signing.
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
# codex.rs / gemini.rs: decode the JWT id_token payload segment (email/hd claims).
base64 = "0.22"
# cli_proxy.rs: 32-byte loopback/management secrets (base64url, no padding).
getrandom = "0.2"
# browser_cookies.rs: read Chrome/Chromium/Brave/Edge/Firefox cookie stores cross-platform.
rookie = "0.5"
# cursor.rs: read the Cursor app's local SQLite state DB (bundled = no libsqlite3-dev on Linux CI).
# Pinned to the same major version rookie's rusqlite dep uses, else cargo
# fails to resolve two versions of the native sqlite3 `links` library.
rusqlite = { version = "0.31", features = ["bundled"] }
# Quota warnings via the OS notification daemon (libnotify/D-Bus on Linux).
tauri-plugin-notification = "2"
# Launch-at-login (XDG autostart .desktop on Linux, systemd-free).
tauri-plugin-autostart = "2"
# Folder picker + native confirm for the Claude Code pane (scope chooser).
tauri-plugin-dialog = "2"
# antigravity.rs: retry-backoff sleep (tokio is already the runtime Tauri
# uses internally; declared directly here only for `time::sleep`).
tokio = { version = "1", features = ["time"] }
